--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
     "@types/react-router": "^5.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
