--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
     "@types/react-router": "^5.1.20",
+    "@types/styled-components": "^5.1.34",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.9.5"
   },
   "scripts": {
